--- a/po/pt.po
+++ b/po/pt.po
@@ -1,13 +1,13 @@
 # PT translation for dpkg.
 # Copyright (C) 2004 Free Software Foundation, Inc.
-# Miguel Figueiredo <elmig@debianpt.org>, 2004.
+# Miguel Figueiredo <elmig@debianpt.org>, 2004-2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.14\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-21 07:26+0300\n"
-"PO-Revision-Date: 2006-04-10 21:47+0000\n"
+"PO-Revision-Date: 2006-07-05 23:27+0000\n"
 "Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -471,9 +471,9 @@ msgstr ""
 " valor de versão começa por não-alfanumérico, sugere adicionar um espaço"
 
 #: lib/fields.c:413 lib/fields.c:416
-#, fuzzy, c-format
+#, c-format
 msgid "`%s' field, reference to `%.255s': version contains `%c'"
-msgstr "campo `%s', referência a `%.255s': versão contém `('"
+msgstr "campo `%s', referência a `%.255s': versão contém `%c'"
 
 #: lib/fields.c:419
 #, c-format
@@ -1817,9 +1817,9 @@ msgid "--compare-versions bad relation"
 msgstr "má relação de --compare-versions"
 
 #: src/enquiry.c:429 src/enquiry.c:440
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: version '%s' has bad syntax: %s\n"
-msgstr "versão b tem sintaxe errada: %s\n"
+msgstr "dpkg: versão '%s' tem sintaxe errada: %s\n"
 
 #: src/errors.c:58
 #, c-format
@@ -2397,9 +2397,9 @@ msgstr ""
 "`less' ou `more' !"
 
 #: src/main.c:206 src/query.c:544 dpkg-deb/main.c:177 dpkg-split/main.c:157
-#, fuzzy, c-format
+#, c-format
 msgid "conflicting actions -%c (--%s) and -%c (--%s)"
-msgstr "acções em conflito --%s e --%s"
+msgstr "acções em conflito -%c (--%s) e -%c (--%s)"
 
 #: src/main.c:212
 #, c-format
@@ -3425,9 +3425,9 @@ msgstr ""
 "final\n"
 
 #: dpkg-deb/build.c:291
-#, fuzzy, c-format
+#, c-format
 msgid "warning, conffile filename `%s' contains trailing white spaces\n"
-msgstr "aviso, o confile `%s' não é um ficheiro comum\n"
+msgstr "aviso, o ficheiro confile `%s' contém espaços em branco de enchimento\n"
 
 #: dpkg-deb/build.c:293
 #, c-format
@@ -4342,29 +4342,29 @@ msgstr "não foi possível executar mksplit"
 #: scripts/cleanup-info.pl:36 scripts/dpkg-divert.pl:16
 #: scripts/dpkg-statoverride.pl:22 scripts/install-info.pl:17
 #: scripts/update-alternatives.pl:37
-#, fuzzy, perl-format
+#, perl-format
 msgid "Debian %s version %s.\n"
-msgstr "Debian `%s'' backend do arquivo de pacote versão %s.\n"
+msgstr "Debian %s versão %s.\n"
 
 #: scripts/cleanup-info.pl:38
-#, fuzzy
 msgid ""
 "\n"
 "Copyright (C) 1996 Kim-Minh Kaplan."
-msgstr "Copyright (C) 1994-1996 Ian Jackson.\n"
+msgstr ""
+"\n"
+"Copyright (C) 1996 Kim-Minh Kaplan."
 
 #: scripts/cleanup-info.pl:41 scripts/dpkg-divert.pl:22
 #: scripts/dpkg-statoverride.pl:27 scripts/install-info.pl:22
 #: scripts/update-alternatives.pl:43
-#, fuzzy
 msgid ""
 "\n"
 "This is free software; see the GNU General Public Licence version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
+"\n"
 "Isto é software livre; veja a GNU General Public Licence versão 2 ou\n"
 "posterior para condições de cópia. Não existe NENHUMA garantia.\n"
-"Veja %s --license para detalhes de copyright e licença.\n"
 
 #: scripts/cleanup-info.pl:49
 #, perl-format
@@ -4379,77 +4379,77 @@ msgid ""
 msgstr ""
 
 #: scripts/cleanup-info.pl:66 scripts/install-info.pl:508
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: warning - unable to unlock %s: %s"
-msgstr "dpkg: aviso - não foi possível o stat a %s `%.250s' : %s\n"
+msgstr "%s: aviso - não foi possível libertar %s %s"
 
 #: scripts/cleanup-info.pl:86 scripts/install-info.pl:119
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: unknown option `%s'"
-msgstr "opção desconhecida --%s"
+msgstr "%s: opção desconhecida `%s'"
 
 #: scripts/cleanup-info.pl:94 scripts/install-info.pl:130
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: too many arguments"
-msgstr "--%s não leva argumentos"
+msgstr "%s: demasiados argumentos"
 
 #: scripts/cleanup-info.pl:101 scripts/install-info.pl:305
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: failed to lock dir for editing! %s"
-msgstr "%s: falhou executar gzip %s"
+msgstr "%s: falhou o lock ao directório para editar! %s"
 
 #: scripts/cleanup-info.pl:103
 #, perl-format
 msgid "try deleting %s"
-msgstr ""
+msgstr "tente apagar %s"
 
 #: scripts/cleanup-info.pl:107 scripts/install-info.pl:312
 #: scripts/update-alternatives.pl:211
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to open %s: %s"
-msgstr "não foi possível executar %s"
+msgstr "não foi possível abrir %s: %s"
 
 #: scripts/cleanup-info.pl:109 scripts/install-info.pl:482
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to create %s: %s"
-msgstr "não foi possível executar %s"
+msgstr "não foi possível criar %s: %s"
 
 #: scripts/cleanup-info.pl:120 scripts/install-info.pl:485
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to write %s: %s"
-msgstr "não foi possível executar %s"
+msgstr "não foi possível escrever %s: %s"
 
 #: scripts/cleanup-info.pl:160 scripts/install-info.pl:165
 #: scripts/install-info.pl:207 scripts/install-info.pl:314
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to read %s: %s"
-msgstr "não foi possível executar %s"
+msgstr "não foi possível ler %s: %s"
 
 #: scripts/cleanup-info.pl:161 scripts/install-info.pl:315
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to close %s after read: %s"
-msgstr "falhou fechar após ler: `%.255s'"
+msgstr "não foi possível fechar %s após ler: %s"
 
 #: scripts/cleanup-info.pl:165 scripts/install-info.pl:486
 #: scripts/update-alternatives.pl:472
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to close %s: %s"
-msgstr "não foi possível executar %s"
+msgstr "não foi possível fechar %s: %s"
 
 #: scripts/cleanup-info.pl:171 scripts/install-info.pl:490
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to backup old %s, giving up: %s"
-msgstr "não foi possível executar %s"
+msgstr "não foi possível salvaguardar o antigo %s, a desistir: %s"
 
 #: scripts/cleanup-info.pl:174
-#, fuzzy, perl-format
+#, perl-format
 msgid "failed to install %s; it will be left as %s: %s"
-msgstr "Não foi possível instalar `%.250s' como `%.250s'"
+msgstr "Não foi possível instalar %s; será deixado como %s: %s"
 
 #: scripts/cleanup-info.pl:178
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: unable to unlock %s: %s"
-msgstr "%s: falhou executar gzip %s"
+msgstr "%s: não foi possível libertar %s: %s"
 
 #: scripts/dpkg-divert.pl:12 scripts/update-alternatives.pl:33
 #, perl-format
@@ -4540,9 +4540,8 @@ msgid "missing altname"
 msgstr "falta %s"
 
 #: scripts/dpkg-divert.pl:119
-#, fuzzy
 msgid "missing package"
-msgstr "falta %s"
+msgstr "falta pacote"
 
 #: scripts/dpkg-divert.pl:125 scripts/dpkg-divert.pl:153
 #: scripts/dpkg-divert.pl:195 scripts/dpkg-statoverride.pl:144
@@ -4551,13 +4550,13 @@ msgid "--%s needs a single argument"
 msgstr "--build necessita de um directório como argumento"
 
 #: scripts/dpkg-divert.pl:127 scripts/dpkg-divert.pl:131
-#, fuzzy, perl-format
+#, perl-format
 msgid "filename \"%s\" is not absolute"
-msgstr "não é possível fazer stat ao conffile `%.250s'"
+msgstr "o nome do ficheiro \"%s\" não é absoluto"
 
 #: scripts/dpkg-divert.pl:128 scripts/dpkg-statoverride.pl:118
 msgid "file may not contain newlines"
-msgstr ""
+msgstr "o ficheiro não pode conter quebras de linha"
 
 #: scripts/dpkg-divert.pl:129
 #, fuzzy
@@ -4565,19 +4564,19 @@ msgid "Cannot divert directories"
 msgstr "não pode ler directório info"
 
 #: scripts/dpkg-divert.pl:138
-#, fuzzy, perl-format
+#, perl-format
 msgid "Leaving `%s'"
-msgstr "erro escrevendo `%s'"
+msgstr "A deixar `%s'"
 
 #: scripts/dpkg-divert.pl:141
 #, perl-format
 msgid "`%s' clashes with `%s'"
-msgstr ""
+msgstr "`%s' choca com `%s'"
 
 #: scripts/dpkg-divert.pl:147
 #, perl-format
 msgid "Adding `%s'"
-msgstr ""
+msgstr "Acrescentar `%s'"
 
 #: scripts/dpkg-divert.pl:157
 #, perl-format
@@ -4596,9 +4595,9 @@ msgid ""
 msgstr ""
 
 #: scripts/dpkg-divert.pl:161
-#, fuzzy, perl-format
+#, perl-format
 msgid "Removing `%s'"
-msgstr "Removendo %s ...\n"
+msgstr "A remover `%s'"
 
 #: scripts/dpkg-divert.pl:176
 #, perl-format
@@ -4606,19 +4605,19 @@ msgid "No diversion `%s', none removed"
 msgstr ""
 
 #: scripts/dpkg-divert.pl:205
-#, fuzzy, perl-format
+#, perl-format
 msgid "internal error - bad mode `%s'"
-msgstr "%s: erro interno de gzip: read: `%s'"
+msgstr "erro interno - modo inválido`%s'"
 
 #: scripts/dpkg-divert.pl:219
-#, fuzzy, perl-format
+#, perl-format
 msgid "cannot stat old name `%s': %s"
-msgstr "Não pode fazer stat `%.255s' (em %.255s')"
+msgstr "Não pode fazer stat ao nome antigo `%s': %s"
 
 #: scripts/dpkg-divert.pl:221
-#, fuzzy, perl-format
+#, perl-format
 msgid "cannot stat new name `%s': %s"
-msgstr "Não pode fazer stat `%.255s' (em %.255s')"
+msgstr "Não pode fazer stat ao novo nome `%s': %s"
 
 #: scripts/dpkg-divert.pl:236
 #, fuzzy, perl-format
@@ -4631,6 +4630,8 @@ msgid ""
 "rename involves overwriting `%s' with\n"
 "  different file `%s', not allowed"
 msgstr ""
+"renomear involve sobre-escrever `%s' com\n"
+"  um ficheiro diferente `%s', não permitido"
 
 #: scripts/dpkg-divert.pl:251
 #, perl-format
@@ -4673,15 +4674,17 @@ msgid "install new diversions: %s"
 msgstr "não foi possível instalar nova versão de `%.255s'"
 
 #: scripts/dpkg-divert.pl:291 scripts/update-alternatives.pl:662
-#, fuzzy, perl-format
+#, perl-format
 msgid "internal error: %s corrupt: %s"
-msgstr "%s: erro interno de gzip: write: `%s'"
+msgstr "erro interno: %s corrompido: %s"
 
 #: scripts/dpkg-statoverride.pl:24
 msgid ""
 "\n"
 "Copyright (C) 2000 Wichert Akkerman."
 msgstr ""
+"\n"
+"Copyright (C) 2000 Wichert Akkerman."
 
 #: scripts/dpkg-statoverride.pl:35
 #, perl-format
@@ -4949,17 +4952,17 @@ msgstr ""
 #: scripts/install-info.pl:422
 #, perl-format
 msgid "%s: deleting entry `%s ...'"
-msgstr ""
+msgstr "%s: a apagar a entrada `%s ...'"
 
 #: scripts/install-info.pl:428
 #, perl-format
 msgid "%s: empty section `%s' not removed"
-msgstr ""
+msgstr "%s: secção vazia `%s', não removida"
 
 #: scripts/install-info.pl:431
 #, perl-format
 msgid "%s: deleting empty section `%s'"
-msgstr ""
+msgstr "%s: a apagar secção vazia `%s'"
 
 #: scripts/install-info.pl:438
 #, perl-format
@@ -4967,34 +4970,34 @@ msgid "%s: no entry for file `%s' and menu entry `%s'"
 msgstr ""
 
 #: scripts/install-info.pl:440
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: no entry for file `%s'"
-msgstr "copiar ficheiro de informação `%.255s'"
+msgstr "%s: nenhuma entrada para o ficheiro `%s'"
 
 #: scripts/install-info.pl:493
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to install new %s: %s"
-msgstr "Não foi possível instalar `%.250s' como `%.250s'"
+msgstr "não foi possível instalar o novo %s: %s"
 
 #: scripts/install-info.pl:496
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to unlock %s: %s"
-msgstr "não foi possível executar %s"
+msgstr "não foi possível libertar %s: %s"
 
 #: scripts/install-info.pl:498
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: could not backup %s in %s: %s"
-msgstr "não pode abrir o log `%s': %s\n"
+msgstr "%s: não pode salvaguardar %s em %s: %s"
 
 #: scripts/install-info.pl:515
 #, fuzzy, perl-format
 msgid "unable to read %s: %d"
-msgstr "não foi possível executar %s"
+msgstr "não foi possível ler %s: %d"
 
 #: scripts/install-info.pl:519
 #, perl-format
 msgid "dbg: %s"
-msgstr ""
+msgstr "dbg: %s"
 
 #: scripts/update-alternatives.pl:39
 msgid ""
@@ -5002,6 +5005,9 @@ msgid ""
 "Copyright (C) 1995 Ian Jackson.\n"
 "Copyright (C) 2000-2002 Wichert Akkerman."
 msgstr ""
+"\n"
+"Copyright (C) 1995 Ian Jackson.\n"
+"Copyright (C) 2000-2002 Wichert Akkerman."
 
 #: scripts/update-alternatives.pl:51
 #, perl-format
@@ -5045,70 +5051,72 @@ msgid ""
 msgstr ""
 
 #: scripts/update-alternatives.pl:117
-#, fuzzy, perl-format
+#, perl-format
 msgid "unknown argument `%s'"
-msgstr "compressão desconhecida tipo `%s'!"
+msgstr "argumento desconhecido `%s'"
 
 #: scripts/update-alternatives.pl:130
 msgid "--install needs <link> <name> <path> <priority>"
-msgstr ""
+msgstr "--install necessita de <link> <nome> <caminho> <prioridade>"
 
 #: scripts/update-alternatives.pl:132
 msgid "priority must be an integer"
-msgstr ""
+msgstr "a prioridade tem de ser um inteiro"
 
 #: scripts/update-alternatives.pl:136
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs <name> <path>"
-msgstr "--%s necessita de um ficheiro .deb como argumento"
+msgstr "--%s necessita de <nome> <caminho>"
 
 #: scripts/update-alternatives.pl:141
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs <name>"
-msgstr "--%s não leva argumentos"
+msgstr "--%s necessita de <nome>"
 
 #: scripts/update-alternatives.pl:145
 msgid "--slave needs <link> <name> <path>"
-msgstr ""
+msgstr "--slave necessita de <link> <nome> <caminho>"
 
 #: scripts/update-alternatives.pl:147
 #, perl-format
 msgid "slave name %s duplicated"
-msgstr ""
+msgstr "o nome do slave %s está duplicado"
 
 #: scripts/update-alternatives.pl:148
 #, perl-format
 msgid "slave link %s duplicated"
-msgstr ""
+msgstr "o link do slave %s está duplicado"
 
 #: scripts/update-alternatives.pl:164
 #, perl-format
 msgid "name %s is both primary and slave"
-msgstr ""
+msgstr "o nome %s é primário e slave"
 
 #: scripts/update-alternatives.pl:165
 #, perl-format
 msgid "link %s is both primary and slave"
-msgstr ""
+msgstr "o link %s é primário e slave"
 
 #: scripts/update-alternatives.pl:167
 msgid ""
 "need --display, --config, --set, --install, --remove, --all, --remove-all or "
 "--auto"
 msgstr ""
+"necessita de --display, --config, --set, --install, --remove, --all"
+"--remove-all ou --auto"
 
 #: scripts/update-alternatives.pl:168
 msgid "--slave only allowed with --install"
-msgstr ""
+msgstr "--slave apenas é permitodo com --install"
 
 #: scripts/update-alternatives.pl:176
 msgid "manflag"
 msgstr ""
 
 #: scripts/update-alternatives.pl:180
-#, fuzzy, perl-format
+#, perl-format
 msgid "duplicate slave %s"
-msgstr "valor duplicado para o campo `%s'"
+msgstr "slave duplicado %s"
 
 #: scripts/update-alternatives.pl:183
 #, perl-format
@@ -5123,12 +5131,12 @@ msgstr "valor duplicado para o campo `%s'"
 #: scripts/update-alternatives.pl:188
 #, perl-format
 msgid "duplicate path %s"
-msgstr ""
+msgstr "caminho duplicado %s"
 
 #: scripts/update-alternatives.pl:193
 #, perl-format
 msgid "priority %s %s"
-msgstr ""
+msgstr "prioridade %s %s"
 
 #: scripts/update-alternatives.pl:200
 #, perl-format
@@ -5141,12 +5149,12 @@ msgstr ""
 #: scripts/update-alternatives.pl:273
 #, perl-format
 msgid "No alternatives for %s."
-msgstr ""
+msgstr "Sem alternativas para %s."
 
 #: scripts/update-alternatives.pl:219
 #, perl-format
 msgid "%s - status is %s."
-msgstr ""
+msgstr "%s - o status é %s."
 
 #: scripts/update-alternatives.pl:221
 #, perl-format
@@ -5165,17 +5173,16 @@ msgstr ""
 #: scripts/update-alternatives.pl:232
 #, perl-format
 msgid "%s - priority %s"
-msgstr ""
+msgstr "%s - prioridade %s"
 
 #: scripts/update-alternatives.pl:235
 #, perl-format
 msgid " slave %s: %s"
-msgstr ""
+msgstr " slave %s: %s"
 
 #: scripts/update-alternatives.pl:239
-#, fuzzy
 msgid "No versions available."
-msgstr "(sem descrição disponível)"
+msgstr "Sem versões disponíveis."
 
 #: scripts/update-alternatives.pl:241
 #, perl-format
@@ -5193,9 +5200,9 @@ msgstr ""
 #: scripts/update-alternatives.pl:483 scripts/update-alternatives.pl:485
 #: scripts/update-alternatives.pl:541 scripts/update-alternatives.pl:543
 #: scripts/update-alternatives.pl:609 scripts/update-alternatives.pl:645
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to remove %s: %s"
-msgstr "não foi possível executar %s"
+msgstr "não foi possível remover %s: %s"
 
 #: scripts/update-alternatives.pl:316
 #, perl-format
