Specify --null before the -T option to avoid the "tar: -: file name read contains nul character" warning. It was tested with older tar versions.

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,10 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Basque (Piarres Beobide). Closes: #375118
   * Russian (Yuri Kozlov). Closes: #376746
 
+  [ Nicolas François ]
+  * Specify --null before the -T tar's option to avoid the "tar: -: file name
+    read contains nul character" warning. Closes: #376351, #375749, #376724
+
  -- Guillem Jover <guillem@debian.org>  Wed, 21 Jun 2006 18:23:39 +0300
 
 dpkg (1.13.22) unstable; urgency=low
