--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-07  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* dpkg-deb/build.c: Specify --null before the -T option to avoid
+	the "tar: -: file name read contains nul character" warning.
+
 2006-06-21  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.13.23~.
