Typos fixed, thanks to N.F.

--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-21 07:29+0300\n"
-"PO-Revision-Date: 2006-07-02 09:00+0200\n"
+"PO-Revision-Date: 2006-07-08 14:27+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -402,12 +402,12 @@ msgstr ""
 #: scripts/dpkg-checkbuilddeps.pl:69
 #, perl-format
 msgid "%s: Unmet build dependencies: "
-msgstr "%s : dépendances de construction non trouvées"
+msgstr "%s : dépendances de construction non trouvées : "
 
 #: scripts/dpkg-checkbuilddeps.pl:73
 #, perl-format
 msgid "%s: Build conflicts: "
-msgstr "%s : conflits de construction du paquet"
+msgstr "%s : conflits de construction du paquet : "
 
 #: scripts/dpkg-checkbuilddeps.pl:146 scripts/dpkg-gencontrol.pl:199
 #: scripts/dpkg-source.pl:208
