Added updated Pt translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Dzongkha (Kinley Tshering)
 
   [ Updated dpkg Translations ]
+  * Portuguese (Miguel Figueiredo).
   * Czech (Miroslav Kure).
   * Dutch (Bart Cornelis).
   * Hungarian (SZERVÁC Attila).
