--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Dzongkha (Kinley Tshering)
 
   [ Updated dpkg Translations ]
-  * Portuguese (Miguel Figueiredo).
+  * Portuguese (Miguel Figueiredo, Rui Branco).
   * Czech (Miroslav Kure).
   * Dutch (Bart Cornelis).
   * Hungarian (SZERVÁC Attila).
