--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-11  Miguel Figueiredo <elmig@debianpt.org>
+	    Rui Branco <ruipb@debianpt.org>
+
+	* pt.po: Updated to 916t.
+
 2006-07-07  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 800t.
