--- a/po/pt.po
+++ b/po/pt.po
@@ -4972,7 +4972,7 @@ msgstr ""
 #: scripts/install-info.pl:279
 #, perl-format
 msgid "%s: no file %s, retrieving backup file %s."
-msgstr "%s: não existed o ficheiro %s, a recuperar ficheiro de cópia de segurança %s."
+msgstr "%s: não existe o ficheiro %s, a recuperar ficheiro de cópia de segurança %s."
 
 #: scripts/install-info.pl:282 scripts/install-info.pl:292
 #, perl-format
@@ -4982,7 +4982,7 @@ msgstr "%s: a cópia de %s para %s falhou, a desistir: %s"
 #: scripts/install-info.pl:288
 #, perl-format
 msgid "%s: no backup file %s available, retrieving default file."
-msgstr "%s: nenhuma cópia de segurança do ficheiro %s disponível %s, a recuperar o "
+msgstr "%s: nenhuma cópia de segurança disponível do ficheiro %s, a recuperar o "
 "ficheiro por omissão."
 
 #: scripts/install-info.pl:297
