German translation update (and new translations) of start-stop-daemon.8, update-alternatives.8, dpkg.cfg.5, and dselect.cfg.5. Also fix some typos in the start-stop-daemon.8 and update-alternatives.8 man pages.

--- a/man/C/update-alternatives.8
+++ b/man/C/update-alternatives.8
@@ -67,7 +67,7 @@ functions to be installed on a single system at the same time.
 For example, many systems have several text editors installed at once.
 This gives choice to the users of a system, allowing each to use a
 different editor, if desired, but makes it difficult for a program
-to make a good choice of editor to invoke if the
+to make a good choice for an editor to invoke if the
 user has not specified a particular preference.
 .PP
 Debian's alternatives system aims to solve this problem.
@@ -166,13 +166,12 @@ of which given
 .I name
 is the master link. The current choice is marked with a '*' and the
 choice with the highest priority with a '+'.
-You will then be prompted for which of the choices to use
-for the link group. Once you make a change, the link group will no
-longer be in
+You will then be prompted for your choice regarding this link group.
+Once you make a change, the link group will no longer be in
 .I auto
 mode. You will need to use the
 .I \-\-auto
-option in order to return to the automatic state.
+option in order to return to the automatic mode.
 .PP
 If you want to configure non-interactively you can use the
 .I \-\-set
@@ -225,7 +224,7 @@ the master link.
 automatic mode
 When a link group is in automatic mode,
 the alternatives system ensures that the links in the group
-point to the highest priority alternatives
+point to the highest priority alternative
 appropriate for the group.
 .TP
 manual mode
@@ -320,7 +319,7 @@ is the name of its symlink in the alternatives directory, and
 .I altern
 is the alternative being introduced for the master link.
 The arguments after \fB\-\-slave\fR are the generic name, symlink name in the
-alternatives directory and alternative for a slave link.
+alternatives directory and the alternative for a slave link.
 Zero or more
 .B \-\-slave
 options, each followed by three arguments,
