--- a/man/C/start-stop-daemon.8
+++ b/man/C/start-stop-daemon.8
@@ -66,11 +66,11 @@ is specified then
 .B start\-stop\-daemon
 will check that the process(es) have terminated.
 
-Note that unless
+Note: unless
 .BR \-\-pidfile ,
-is specified, then
+is specified,
 .B start\-stop\-daemon
-behaves similarly to
+behaves similar to
 .B killall(1).
 .B start\-stop\-daemon
 will scan the process table looking for any processes which
@@ -90,8 +90,7 @@ you must specify a pidfile.
 .TP
 \fB\-x\fP|\fB\-\-exec\fP \fIexecutable\fP
 Check for processes that are instances of this executable (according to
-.B /proc/\fIpid\fB/exe\fP
-).
+\fB/proc/\fIpid\fP/exe\fR).
 .TP
 \fB\-p\fP|\fB\-\-pidfile\fP \fIpid-file\fP
 Check whether a process has created the file
@@ -195,7 +194,7 @@ even if the
 option is not specified. The
 .B \-\-group
 option is only for
-groups that the user isn't normally a member of (like adding per/process
+groups that the user isn't normally a member of (like adding per process
 group membership for generic users like
 .BR nobody ).
 .TP
@@ -223,7 +222,7 @@ cannot check the exit status if the process fails to execute for
 .B any
 reason. This is a last resort, and is only meant for programs that either
 make no sense forking on their own, or where it's not feasible to add the
-code for it to do this itself.
+code for them to do this themself.
 .TP
 \fB\-N\fP|\fB\-\-nicelevel\fP \fIint\fP
 This alters the priority of the process before starting it.
@@ -237,8 +236,8 @@ option will make
 .B start\-stop\-daemon
 create the file referenced with
 .B \-\-pidfile
-and place the pid into it just before executing the process. Note, it will
-not be removed when stopping the program.
+and place the pid into it just before executing the process. Note, the
+file will not be removed when stopping the program.
 .B NOTE:
 This feature may not work in all cases. Most notably when the program
 being executed forks from its main process. Because of this it is usually
