--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,17 @@
+2006-07-22  Helge Kreutzmann  <helge@helgefjell.de>
+
+	* C/start-stop-daemon.8: Typo fix.
+	* C/update-alternatives.8: Likewise.
+	* po4a/start-stop-daemon.8/po/de.po: Updated translation.
+	* po4a/update-alternatives.8/po/de.po: Likewise.
+	* po4a/dpkg.cfg.5/po/de.po: New translation.
+	* po4a/dselect.cfg.5/po/de.po: Likewise.
+	* po4a/add_de/dpkg.cfg.5.de.add: Addendum for the new translation.
+	* po4a/add_de/dselect.cfg.5.de.add: Likewise.
+	* po4a/add_de/update-alternatives.8.de.add: Updated addendum.
+	* man/po4a/dpkg.cfg.5/dpkg.cfg.5.cfg: Add the `de' language.
+	* man/po4a/dselect.cfg.5/dselect.cfg.5.cfg: Likewise.
+
 2006-05-24  Philippe Batailler  <philippe.batailler@free.fr>
 
 	* po4a/install-info.8/po/fr.po: Updated translation.
