--- a/man/po4a/start-stop-daemon.8/po/de.po
+++ b/man/po4a/start-stop-daemon.8/po/de.po
@@ -1,13 +1,13 @@
 # SOME DESCRIPTIVE TITLE
 # Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Helge Kreutzmann <debian@helgefjell.de>, 2006.
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-06-21 17:57+0300\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-07-21 22:11+0200\n"
+"Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -15,15 +15,14 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:1
-#, fuzzy, no-wrap
 msgid "start-stop-daemon"
-msgstr "B<start-stop-daemon> B<-H>|B<--help>"
+msgstr "start-stop-daemon"
 
 # type: TH
 #: ../../../man/po4a/../C/start-stop-daemon.8:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "2006-02-28"
 
 # type: TH
 #: ../../../man/po4a/../C/start-stop-daemon.8:1
@@ -35,7 +34,7 @@ msgstr "Debian-Projekt"
 #: ../../../man/po4a/../C/start-stop-daemon.8:1
 #, no-wrap
 msgid "dpkg utilities"
-msgstr "dpkg Werkzeuge"
+msgstr "dpkg-Werkzeuge"
 
 # type: SH
 #: ../../../man/po4a/../C/start-stop-daemon.8:2
@@ -82,7 +81,6 @@ msgstr "BESCHREIBUNG"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:29
-#, fuzzy
 msgid ""
 "B<start-stop-daemon> is used to control the creation and termination of "
 "system-level processes.  Using the B<--exec>, B<--pidfile>, B<--user>, and "
@@ -91,13 +89,12 @@ msgid ""
 msgstr ""
 "B<start-stop-daemon> wird zur Kontrolle der Erzeugung und Beendigung von "
 "Prozessen auf Systemebene verwendet. Durch die Verwendung der B<--exec>, B<--"
-"pidfile>, B<--user>, und B<--name> Optionen kann B<start-stop-daemon> so "
-"konfiguriert werden, daß er bereits existierende Instanzen von einem "
+"pidfile>, B<--user> und B<--name> Optionen kann B<start-stop-daemon> so "
+"konfiguriert werden, dass er existierende Instanzen von einem "
 "laufenden Prozess finden kann."
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:48
-#, fuzzy
 msgid ""
 "With B<--start>, B<start-stop-daemon> checks for the existence of a "
 "specified process.  If such a process exists, B<start-stop-daemon> does "
@@ -107,20 +104,18 @@ msgid ""
 "arguments given after B<--> on the command line are passed unmodified to the "
 "program being started."
 msgstr ""
-"Mittels B<--start> überprüft B<start-stop-daemon> auf die Existenz von "
-"speziellen Prozessen.  Falls ein solcher Prozess existiert, dann macht "
+"Mittels B<--start> überprüft B<start-stop-daemon> auf die Existenz eines "
+"speziellen Prozesses. Falls ein solcher Prozess existiert, dann macht "
 "B<start-stop-daemon> nichts, und beendet sich mit Fehlerstatus 1 (0, falls "
-"B<--oknodo> angegeben wurde).  Falls ein solcher Prozess nicht existiert, "
+"B<--oknodo> angegeben wurde). Falls ein solcher Prozess nicht existiert, "
 "dann startet es eine Instanz, entweder unter Verwendung des ausführbaren "
-"Programms, das mittels B<--exec> spezifiziert wurde (oder, falls angegeben, "
-"mittels B<--startas>).  Jedes weitere auf der Kommandozeile angegebene "
-"Argument nach B<--> wird unverändert an das zu startende Programm "
-"weitergegeben. Falls B<--retry> spezifiziert wurde, dann überprüft B<start-"
-"stop-daemon> ob der Prozess (die Prozesse) beendet wurden."
+"Programms, das mittels B<--exec> (oder, falls angegeben, mittels "
+"B<--startas>) spezifiziert wurde. Jedes weitere auf der Kommandozeile "
+"angegebene Argument nach B<--> wird unverändert an das zu startende Programm "
+"weitergegeben."
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:68
-#, fuzzy
 msgid ""
 "With B<--stop>, B<start-stop-daemon> also checks for the existence of a "
 "specified process.  If such a process exists, B<start-stop-daemon> sends it "
@@ -132,9 +127,10 @@ msgstr ""
 "Mit B<--stop> überprüft B<start-stop-daemon> auf auf die Existenz eines "
 "speziellen Prozesses. Falls ein solcher Prozess existiert, dann sendet "
 "B<start-stop-daemon> das durch B<--signal> spezifizierte Signal und beendet "
-"sich mit Fehlerstatus 0.  Falls kein solcher Prozess existiert, dann beendet "
+"sich mit Fehlerstatus 0. Falls kein solcher Prozess existiert, dann beendet "
 "sich B<start-stop-daemon> mit Fehlerstatus 1 (0 falls B<--oknodo> "
-"spezifiziert ist)."
+"spezifiziert ist). Falls B<--retry> spezifiziert wurden dann wird "
+"B<start-stop-daemon> überprüfen, ob der/die Prozess(e) beendet wurden."
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:87
@@ -162,12 +158,11 @@ msgstr "B<-x>|B<--exec> I<Programm>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:95
-#, fuzzy
 msgid ""
 "Check for processes that are instances of this executable (according to B</"
 "proc/>I<pid>B</exe> )."
 msgstr ""
-"Überprüfe auf Prozesse die (laut B</proc/>I<pid>B</exe>)  Instanzen von "
+"Überprüfe auf Prozesse die (laut B</proc/>I<pid>B</exe>) Instanzen von "
 "diesem Programm sind."
 
 # type: TP
@@ -178,9 +173,8 @@ msgstr "B<-p>|B<--pidfile> I<pid-Datei>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:99
-#, fuzzy
 msgid "Check whether a process has created the file I<pid-file>."
-msgstr "Überprüfe auf Prozesse deren Prozess-ID in I<pid-Datei> angegeben ist."
+msgstr "Überprüfe, ob ein Prozess die Datei I<pid-Datei> erstellt hat."
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:99
@@ -190,7 +184,6 @@ msgstr "B<-u>|B<--user> I<Benutzername>|I<uid>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:105
-#, fuzzy
 msgid ""
 "Check for processes owned by the user specified by I<username> or I<uid>."
 msgstr ""
@@ -205,7 +198,6 @@ msgstr "B<-g>|B<--group> I<Gruppe>|I<gid>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:108
-#, fuzzy
 msgid "Change to I<group> or I<gid> when starting the process."
 msgstr "Wechsle zum Starten des Prozesses zur I<Gruppe> oder I<gid>."
 
@@ -217,7 +209,6 @@ msgstr "B<-n>|B<--name> I<Prozessname>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:114
-#, fuzzy
 msgid ""
 "Check for processes with the name I<process-name> (according to B</proc/"
 ">I<pid>B</stat>)."
@@ -233,7 +224,6 @@ msgstr "B<-s>|B<--signal> I<Signal>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:119
-#, fuzzy
 msgid ""
 "With B<--stop>, specifies the signal to send to processes being stopped "
 "(default 15)."
@@ -245,11 +235,10 @@ msgstr ""
 #: ../../../man/po4a/../C/start-stop-daemon.8:119
 #, no-wrap
 msgid "B<-R>|B<--retry> I<timeout>|I<schedule>"
-msgstr "B<-R>|B<--retry> I<timeout>|I<Plan>"
+msgstr "B<-R>|B<--retry> I<Zeitüberschreitung>|I<Plan>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:129
-#, fuzzy
 msgid ""
 "With B<--stop>, specifies that B<start-stop-daemon> is to check whether the "
 "process(es)  do finish. It will check repeatedly whether any matching "
@@ -257,26 +246,23 @@ msgid ""
 "then take further action as determined by the schedule."
 msgstr ""
 "Mit B<--stop> spezifiziert, das B<start-stop-daemon> überprüfen soll, ob der "
-"Prozess (die Prozesse) sich beenden. Es überprüft regelmäßig, ob ein "
-"passender Prozess läuft, bis dies nicht mehr der Fall ist. Falls sich die "
+"Prozess (die Prozesse) sich beenden. Es überprüft wiederholt, ob "
+"passende Prozesse laufen, bis dies nicht mehr der Fall ist. Falls sich die "
 "Prozesse nicht beenden werden weitere im »Plan« angegebene Aktionen "
 "durchgeführt."
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:140
-#, fuzzy
 msgid ""
 "If I<timeout> is specified instead of I<schedule> then the schedule "
 "I<signal>B</>I<timeout>B</KILL/>I<timeout> is used, where I<signal> is the "
 "signal specified with B<--signal>."
 msgstr ""
-"Falls I<timeout> anstelle von I<Plan> spezifiziert wird, dann wird der Plan "
-"I<signal>B</>I<timeout>B</KILL/>I<timeout> verwendet, wobei I<signal> das "
-"mit B<--signal> spezifizierte Signal ist."
+"Falls I<Zeitüberschreitung> anstelle von I<Plan> spezifiziert wird, dann wird ""der Plan I<Signal>B</>I<Zeitüberschreitung>B</KILL/>I<Zeitüberschreitung> "
+"verwendet, wobei I<Signal> das mit B<--signal> spezifizierte Signal ist."
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:156
-#, fuzzy
 msgid ""
 "I<schedule> is a list of at least two items separated by slashes (B</>); "
 "each item may be B<->I<signal-number> or [B<->]I<signal-name>, which means "
@@ -286,21 +272,20 @@ msgid ""
 msgstr ""
 "I<Plan> ist eine Liste von mindestens zwei durch Schrägstriche (B</>)  "
 "getrennten Punkten; jeder Punkt kann aus B<->I<Signalnummer> oder [B<->]"
-"I<Signalname> bestehen, was bedeutet, daß dieses Signal gesendet werden "
-"soll, oder aus I<timeout> was bedeutet das soviele Sekunden auf das Beenden "
-"des Prozesses gewartet werden soll, oder B<forever> was bedeutet, den Rest "
-"des Plans falls notwendig für immer zu wiederholen."
+"I<Signalname> bestehen, was bedeutet, dass dieses Signal gesendet werden "
+"soll, oder aus I<Zeitüberschreitung>, was bedeutet, dass soviele Sekunden auf "
+"das Beenden von Prozessen gewartet werden soll, oder aus B<forever> was "
+"bedeutet, den Rest des Plans falls notwendig für immer zu wiederholen."
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:166
-#, fuzzy
 msgid ""
 "If the end of the schedule is reached and B<forever> is not specified, then "
 "B<start-stop-daemon> exits with error status 2.  If a schedule is specified, "
 "then any signal specified with B<--signal> is ignored."
 msgstr ""
 "Falls das Ende des Plans erreicht wird und B<forever> nicht spezifiziert "
-"wurde, dann beendet sich der B<start-stop-daemon> mit dem Fehlerstatus 2.  "
+"wurde, dann beendet sich der B<start-stop-daemon> mit dem Fehlerstatus 2. "
 "Falls ein Plan spezifiziert wurde dann wird jedes mit B<--signal> "
 "spezifizierte Signal ignoriert."
 
@@ -312,7 +297,6 @@ msgstr "B<-a>|B<--startas> I<Pfadname>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:174
-#, fuzzy
 msgid ""
 "With B<--start>, start the process specified by I<pathname>.  If not "
 "specified, defaults to the argument given to B<--exec>."
@@ -329,13 +313,12 @@ msgstr "B<-t>|B<--test>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:178
-#, fuzzy
 msgid ""
 "Print actions that would be taken and set appropriate return value, but take "
 "no action."
 msgstr ""
-"Gibt die zu erledigenden Aktionen aus und setzt die entsprechenden "
-"Rückgabewerte, führt aber keine Aktionen durch."
+"Gebe die Aktionen aus, die erledigt würden setze die entsprechenden "
+"Rückgabewerte, führe aber keine Aktionen durch."
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:178
@@ -345,7 +328,6 @@ msgstr "B<-o>|B<--oknodo>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:181
-#, fuzzy
 msgid "Return exit status 0 instead of 1 if no actions are (would be) taken."
 msgstr ""
 "Liefert den Rückgabewert 0 anstatt 1 falls keine Aktionen ausgeführt wurden "
@@ -359,11 +341,9 @@ msgstr "B<-q>|B<--quiet>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:184
-#, fuzzy
 msgid "Do not print informational messages; only display error messages."
 msgstr ""
-"Gibt keine informationelle Meldungen aus, nur Fehlermeldungen werden "
-"angezeigt."
+"Gebe keine informationelle Meldungen aus, zeige nur Fehlermeldungen an."
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:184
@@ -373,7 +353,6 @@ msgstr "B<-c>|B<--chuid> I<Benutzername>|I<uid>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:201
-#, fuzzy
 msgid ""
 "Change to this username/uid before starting the process. You can also "
 "specify a group by appending a B<:>, then the group or gid in the same way "
@@ -383,14 +362,15 @@ msgid ""
 "is only for groups that the user isn't normally a member of (like adding per/"
 "process group membership for generic users like B<nobody>)."
 msgstr ""
-"Wechselt vor dem Start des Prozesses zu diesem Benutzername/uid. Sie können "
+"Wechsele vor dem Start des Prozesses zu diesem Benutzername/uid. Sie können "
 "durch Anhängen von B<:> auch die Gruppe spezifizieren, in diesem Fall wird "
 "die Gruppe oder gid wie bei dem »chown«-Befehl (I<Benutzer>B<:>I<Gruppe>) "
-"angegeben.  Wenn Sie diese Option verwenden, müssen Sie daran denken, daß "
+"angegeben. Wenn Sie diese Option verwenden, müssen Sie daran denken, dass "
 "die primäre und zusätzlichen Gruppe auch gesetzt werden, selbst wenn die B<--"
-"group> Option nicht spezifiziert wird. Die B<--group> ist nur für Gruppen in "
-"denen der Benutzer normalerweise kein Mitglied ist (wie das Hinzufügen von "
-"pro-Prozess Gruppenmitgliedschaften für generische Nutzer wie B<nobody>)."
+"group> Option nicht spezifiziert wird. Die B<--group>-Option ist nur für "
+"Gruppen in denen der Benutzer normalerweise kein Mitglied ist (wie das "
+"Hinzufügen von pro-Prozess Gruppenmitgliedschaften für generische Benutzer "
+"wie B<nobody>)."
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:201
@@ -400,13 +380,12 @@ msgstr "B<-r>|B<--chroot> I<Wurzel>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:207
-#, fuzzy
 msgid ""
 "Chdir and chroot to I<root> before starting the process. Please note that "
 "the pidfile is also written after the chroot."
 msgstr ""
-"Chdir und chroot vor dem Start des Prozesse zu I<Wurzel>.# Bitte beachten "
-"Sie das die PID-Datei auch nach dem chroot geschrieben wird."
+"Chdir und chroot vor dem Start des Prozesse zu I<Wurzel>. Bitte beachten "
+"Sie, das die PID-Datei auch nach dem chroot geschrieben wird."
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:207
@@ -416,14 +395,15 @@ msgstr "B<-d>|B<--chdir> I<Pfad>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:215
-#, fuzzy
 msgid ""
 "Chdir to I<path> before starting the process. This is done after the chroot "
 "if the B<-r>|B<--chroot> option is set. When not specified, start-stop-"
 "daemon will chdir to the root directory before starting the process."
 msgstr ""
-"Chdir vor dem Starten des Prozesses zu I<Pfad>.  Dies wird, falls die B<-r>|"
-"B<--chroot> Option gesetzt ist, nach dem chroot durchgeführt."
+"Chdir vor dem Starten des Prozesses zu I<Pfad>. Dies wird, falls die B<-r>|"
+"B<--chroot> Option gesetzt ist, nach dem chroot durchgeführt. Falls nicht "
+"angegeben, wird start-stop-daemon vor dem Prozess-Start in das "
+"Wurzelverzeichnis wechseln."
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:215
@@ -433,11 +413,10 @@ msgstr "B<-b>|B<--background>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:227
-#, fuzzy
 msgid ""
 "Typically used with programs that don't detach on their own. This option "
 "will force B<start-stop-daemon> to fork before starting the process, and "
-"force it into the background.  B<WARNING: start-stop-daemon> cannot check "
+"force it into the background. B<WARNING: start-stop-daemon> cannot check "
 "the exit status if the process fails to execute for B<any> reason. This is a "
 "last resort, and is only meant for programs that either make no sense "
 "forking on their own, or where it's not feasible to add the code for it to "
@@ -445,7 +424,7 @@ msgid ""
 msgstr ""
 "Typischerweise verwendet für Programme die sich nicht selbständig ablösen. "
 "Diese Option zwingt B<start-stop-daemon> vor dem Start des Prozesses einen "
-"Fork durchzuführen, und ihn in den Hintergrund zu zwingen.  B<WARNUNG: start-"
+"Fork durchzuführen, und zwingt ihn in den Hintergrund. B<WARNUNG: start-"
 "stop-daemon> kann nicht den Rückgabewert überprüfen, falls der Prozess aus "
 "B<irgendeinem> Grund nicht startet. Dies ist ein letztes Mittel und ist nur "
 "für Programme gedacht, bei denen das selbstständige Forken keinen Sinn macht "
@@ -453,27 +432,23 @@ msgstr ""
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:227
-#, fuzzy, no-wrap
 msgid "B<-N>|B<--nicelevel> I<int>"
-msgstr "B<-N>|B<--nicelevel> I<Ganzzahl>  "
+msgstr "B<-N>|B<--nicelevel> I<Ganzzahl>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:230
-#, fuzzy
 msgid "This alters the priority of the process before starting it."
 msgstr "Dies ändert die Priorität des Prozesses bevor er gestartet wird."
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:230
-#, fuzzy, no-wrap
 msgid "B<-k>|B<--umask> I<mask>"
-msgstr "B<-s>|B<--signal> I<Signal>"
+msgstr "B<-k>|B<--umask> I<Maske>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:233
-#, fuzzy
 msgid "This sets the umask of the process before starting it."
-msgstr "Dies ändert die Priorität des Prozesses bevor er gestartet wird."
+msgstr "Dies setzt die umask des Prozesses bevor er gestartet wird."
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:233
@@ -483,7 +458,6 @@ msgstr "B<-m>|B<--make-pidfile>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:248
-#, fuzzy
 msgid ""
 "Used when starting a program that does not create its own pid file. This "
 "option will make B<start-stop-daemon> create the file referenced with B<--"
@@ -493,11 +467,11 @@ msgid ""
 "from its main process. Because of this it is usually only useful when "
 "combined with the B<--background> option."
 msgstr ""
-"Verwendet wenn ein Programm gestartet wird, dass keine eigene PID-Datei "
+"Verwendet, wenn ein Programm gestartet wird, dass keine eigene PID-Datei "
 "erstellt. Diese Option sorgt dafür, dass B<start-stop-daemon> die mit B<--"
 "pidfile> referenzierte Datei anlegt und die PID kurz vor der Ausführung des "
-"Prozesse hineinlegt. Beachten Sie, dass sie nicht entfernt wird wenn das "
-"Programm beendet wird.  B<HINWEIS:> Diese Funktion könnte nicht in allen "
+"Prozesse hineinlegt. Beachten Sie, dass sie nicht entfernt wird, wenn das "
+"Programm beendet wird. B<HINWEIS:> Diese Funktion könnte in nicht allen "
 "Fällen funktionieren. Insbesondere wenn das auszuführende Programm sich vom "
 "Hauptprozess forkt. Deshalb ist diese Option normalerweise nur in "
 "Kombination mit der B<--background> Option sinnvoll."
@@ -565,6 +539,5 @@ msgstr ""
 #~ msgstr "START-STOP-DAEMON"
 
 # type: TH
-#, fuzzy
 #~ msgid "15th March 1997"
-#~ msgstr "14. Mai 2004"
+#~ msgstr "15. März 1997"
