iRemove a coma in start-stop-daemon.8, and update the POT and POs.

--- a/man/C/start-stop-daemon.8
+++ b/man/C/start-stop-daemon.8
@@ -67,7 +67,7 @@ is specified then
 will check that the process(es) have terminated.
 
 Note: unless
-.BR \-\-pidfile ,
+.B \-\-pidfile
 is specified,
 .B start\-stop\-daemon
 behaves similar to
