--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2006-07-23  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* C/start-stop-daemon.8: Typo fix.
+	* po4a/start-stop-daemon.8/po/start-stop-daemon.8.pot: Regenerated.
+	* po4a/start-stop-daemon.8/po/*.po: Merge with pot file.
+
 2006-07-22  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* po4a/start-stop-daemon.8/po/start-stop-daemon.8.pot: Regenerated.
