--- a/man/po4a/start-stop-daemon.8/po/de.po
+++ b/man/po4a/start-stop-daemon.8/po/de.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-07-23  0:04+0200\n"
+"POT-Creation-Date: 2006-07-23 12:43+0200\n"
 "PO-Revision-Date: 2006-07-21 22:11+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
@@ -136,9 +136,9 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:87
 msgid ""
-"Note: unless B<--pidfile>, is specified, B<start-stop-daemon> behaves "
-"similar to B<killall(1).> B<start-stop-daemon> will scan the process table "
-"looking for any processes which match the process name, uid, and/or gid (if "
+"Note: unless B<--pidfile> is specified, B<start-stop-daemon> behaves similar "
+"to B<killall(1).> B<start-stop-daemon> will scan the process table looking "
+"for any processes which match the process name, uid, and/or gid (if "
 "specified). Any matching process will prevent B<--start> from starting the "
 "daemon. All matching processes will be sent the KILL signal if B<--stop> is "
 "specified. For daemons which have long-lived children which need to live "
