Updated German translation of start-stop-daemon.8 and update-alternatives.8.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-23  Helge Kreutzmann  <helge@helgefjell.de>
+
+	* po4a/start-stop-daemon.8/po/de.po: Updated translation (64t1u).
+	* po4a/update-alternatives.8/po/de.po: Likewise (116t).
+
 2006-07-23  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* C/start-stop-daemon.8: Typo fix.
