--- a/man/po4a/update-alternatives.8/po/de.po
+++ b/man/po4a/update-alternatives.8/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-23  0:04+0200\n"
-"PO-Revision-Date: 2006-07-22 21:03+0200\n"
+"PO-Revision-Date: 2006-07-23 11:41+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -124,7 +124,6 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/update-alternatives.8:72
-#, fuzzy
 msgid ""
 "It is possible for several programs fulfilling the same or similar functions "
 "to be installed on a single system at the same time.  For example, many "
@@ -138,8 +137,8 @@ msgstr ""
 "Beispielsweise sind auf vielen Systemen mehrere Texteditoren gleichzeitig "
 "installiert. Dies gibt den Benutzern eines Systems die Möglichkeit, falls "
 "gewünscht, jeweils einen anderen Editor zu verwenden, allerdings wird es "
-"damit für ein Programm schwierig, einen guten Editor zum Starten "
-"auszuwählen, falls der Benutzer keine spezielle Wahl getroffen hat."
+"damit für ein Programm schwierig, einen guten Wahl für einen Editor zum "
+"Starten zu treffen, falls der Benutzer keine spezielle Wahl getroffen hat."
 
 # type: Plain text
 #: ../../../man/po4a/../C/update-alternatives.8:94
@@ -266,7 +265,6 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/update-alternatives.8:175
-#, fuzzy
 msgid ""
 "When using the I<--config> option, B<update-alternatives> will list all of "
 "the choices for the link group of which given I<name> is the master link. "
@@ -280,10 +278,10 @@ msgstr ""
 "alle Auswahlmöglichkeiten für die Link-Gruppe an, für die der gegebene "
 "I<Name> der Master-Link ist. Die aktuelle Auswahl ist mit »*« markiert, und "
 "die Auswahl mit der höchsten Priorität mit »+«. Sie werden dann aufgefordert "
-"anzugeben, welche der Möglichkeiten für die Linkgruppe verwendet werden "
-"soll. Sobald Sie eine Änderung durchführen, befindet sich die Linkgruppe "
-"nicht mehr im I<automatischen> Modus. Sie müssen dann die I<--auto> Option "
-"verwenden, um wieder in den automatischen Zustand zurückzukehren."
+"anzugeben, Ihre Auswahl bezüglich der Linkgruppe anzugeben. Sobald Sie eine "
+"Änderung durchführen, befindet sich die Linkgruppe nicht mehr im "
+"I<automatischen> Modus. Sie müssen dann die I<--auto> Option verwenden, um "
+"wieder in den automatischen Zustand zurückzukehren."
 
 # type: Plain text
 #: ../../../man/po4a/../C/update-alternatives.8:179
@@ -434,7 +432,6 @@ msgstr "automatischer Modus"
 
 # type: Plain text
 #: ../../../man/po4a/../C/update-alternatives.8:229
-#, fuzzy
 msgid ""
 "When a link group is in automatic mode, the alternatives system ensures that "
 "the links in the group point to the highest priority alternative appropriate "
@@ -650,7 +647,6 @@ msgstr "B<--install> I<Genname Symlink Altern Priorität> [B<--slave> I<Genname S
 
 # type: Plain text
 #: ../../../man/po4a/../C/update-alternatives.8:327
-#, fuzzy
 msgid ""
 "Add a group of alternatives to the system.  I<genname> is the generic name "
 "for the master link, I<symlink> is the name of its symlink in the "
@@ -664,9 +660,9 @@ msgstr ""
 "generische Name des Master-Links, I<Symlink> ist der Name seines Symlinks im "
 "Alternative-Verzeichnis und I<Altern> ist die Alternative, die für den "
 "Master-Link eingeführt wird. Die Argumente nach B<--slave> sind der "
-"generische Name, Symlink-Name in dem Alternative-Verzeichnis und Alternative "
-"für den Slave-Link. Null oder mehrere B<--slave>-Optionen, jede von drei "
-"Argumenten gefolgt, können spezifiziert werden."
+"generische Name, Symlink-Name in dem Alternative-Verzeichnis und die "
+"Alternative für den Slave-Link. Null oder mehrere B<--slave>-Optionen, jede "
+"von drei Argumenten gefolgt, können spezifiziert werden."
 
 # type: Plain text
 #: ../../../man/po4a/../C/update-alternatives.8:338
@@ -711,7 +707,6 @@ msgstr "B<--remove> I<Name Pfad>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/update-alternatives.8:367
-#, fuzzy
 msgid ""
 "Remove an alternative and all of its associated slave links.  I<name> is a "
 "name in the alternatives directory, and I<path> is an absolute filename to "
@@ -722,7 +717,7 @@ msgid ""
 "pointing to I<path>, no links are changed; only the information about the "
 "alternative is removed."
 msgstr ""
-"Entfernt eine Alternative und alle zugehörigen Slave-Links. I<Name> ist ein "
+"Entferne eine Alternative und alle zugehörigen Slave-Links. I<Name> ist ein "
 "Name im Alternativ-Verzeichnis, und I<Pfad> ist ein absoluter Dateiname zu "
 "dem I<Name> gelinkt werden könnte. Falls I<Name> tatsächlich nach I<Pfad> "
 "gelinkt ist, dann wird I<Name> aktualisiert um auf eine andere geeignete "
