Another typo. Still in the same string, so no additional fuzzy.

--- a/man/C/start-stop-daemon.8
+++ b/man/C/start-stop-daemon.8
@@ -71,7 +71,7 @@ Note: unless
 is specified,
 .B start\-stop\-daemon
 behaves similar to
-.B killall(1).
+.BR killall (1).
 .B start\-stop\-daemon
 will scan the process table looking for any processes which
 match the process name, uid, and/or gid (if specified). Any
