--- a/man/po4a/start-stop-daemon.8/po/de.po
+++ b/man/po4a/start-stop-daemon.8/po/de.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-07-23 12:43+0200\n"
+"POT-Creation-Date: 2006-07-23 16:11+0200\n"
 "PO-Revision-Date: 2006-07-23 11:45+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
@@ -137,7 +137,7 @@ msgstr ""
 #: ../../../man/po4a/../C/start-stop-daemon.8:87
 msgid ""
 "Note: unless B<--pidfile> is specified, B<start-stop-daemon> behaves similar "
-"to B<killall(1).> B<start-stop-daemon> will scan the process table looking "
+"to B<killall>(1).  B<start-stop-daemon> will scan the process table looking "
 "for any processes which match the process name, uid, and/or gid (if "
 "specified). Any matching process will prevent B<--start> from starting the "
 "daemon. All matching processes will be sent the KILL signal if B<--stop> is "
