--- a/man/po4a/start-stop-daemon.8/po/start-stop-daemon.8.pot
+++ b/man/po4a/start-stop-daemon.8/po/start-stop-daemon.8.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-07-23 12:43+0200\n"
+"POT-Creation-Date: 2006-07-23 16:11+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -117,7 +117,7 @@ msgstr ""
 #: ../../../man/po4a/../C/start-stop-daemon.8:87
 msgid ""
 "Note: unless B<--pidfile> is specified, B<start-stop-daemon> behaves similar "
-"to B<killall(1).> B<start-stop-daemon> will scan the process table looking "
+"to B<killall>(1).  B<start-stop-daemon> will scan the process table looking "
 "for any processes which match the process name, uid, and/or gid (if "
 "specified). Any matching process will prevent B<--start> from starting the "
 "daemon. All matching processes will be sent the KILL signal if B<--stop> is "
