--- a/man/po4a/start-stop-daemon.8/po/fr.po
+++ b/man/po4a/start-stop-daemon.8/po/fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-07-23 12:43+0200\n"
+"POT-Creation-Date: 2006-07-23 16:11+0200\n"
 "PO-Revision-Date: 2006-06-24 10:41+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -135,7 +135,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Note: unless B<--pidfile> is specified, B<start-stop-daemon> behaves similar "
-"to B<killall(1).> B<start-stop-daemon> will scan the process table looking "
+"to B<killall>(1).  B<start-stop-daemon> will scan the process table looking "
 "for any processes which match the process name, uid, and/or gid (if "
 "specified). Any matching process will prevent B<--start> from starting the "
 "daemon. All matching processes will be sent the KILL signal if B<--stop> is "
