--- a/man/po4a/start-stop-daemon.8/po/pl.po
+++ b/man/po4a/start-stop-daemon.8/po/pl.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.13.16\n"
-"POT-Creation-Date: 2006-07-23 12:43+0200\n"
+"POT-Creation-Date: 2006-07-23 16:11+0200\n"
 "PO-Revision-Date: 2006-03-01 23:37+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
@@ -144,7 +144,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Note: unless B<--pidfile> is specified, B<start-stop-daemon> behaves similar "
-"to B<killall(1).> B<start-stop-daemon> will scan the process table looking "
+"to B<killall>(1).  B<start-stop-daemon> will scan the process table looking "
 "for any processes which match the process name, uid, and/or gid (if "
 "specified). Any matching process will prevent B<--start> from starting the "
 "daemon. All matching processes will be sent the KILL signal if B<--stop> is "
