Finish the update of the start-stop-daemon.8 German translation.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,6 +1,6 @@
 2006-07-23  Helge Kreutzmann  <helge@helgefjell.de>
 
-	* po4a/start-stop-daemon.8/po/de.po: Updated translation (64t1u).
+	* po4a/start-stop-daemon.8/po/de.po: Updated translation (65t).
 	* po4a/update-alternatives.8/po/de.po: Likewise (116t).
 
 2006-07-23  Nicolas Francois  <nicolas.francois@centraliens.net>
