Fix the 822-date.1 modification date.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -10,6 +10,7 @@
 	* man/po4a/deb-old.5/deb-old.5.cfg: Likewise.
 	* man/po4a/add_de/start-stop-daemon.8.de.add: The previous
 	addendum was empty.
+	* C/822-date.1: Fix the manpage's modification date.
 
 2006-07-23  Nicolas Francois  <nicolas.francois@centraliens.net>
 
