--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -2,14 +2,14 @@
 
 	* po4a/start-stop-daemon.8/po/de.po: Updated translation (65t).
 	* po4a/update-alternatives.8/po/de.po: Likewise (116t).
-	* man/po4a/822-date.1/po/de.po: New translation.
-	* man/po4a/deb-old.5/po/de.po: Likewise.
-	* man/po4a/add_de/822-date.1.de.add: Addendum for the new translation.
-	* man/po4a/add_de/deb-old.5.de.add: Likewise.
-	* man/po4a/822-date.1/822-date.1.cfg: Add the `de' language.
-	* man/po4a/deb-old.5/deb-old.5.cfg: Likewise.
-	* man/po4a/add_de/start-stop-daemon.8.de.add: The previous
-	addendum was empty.
+	* po4a/822-date.1/po/de.po: New translation.
+	* po4a/deb-old.5/po/de.po: Likewise.
+	* po4a/add_de/822-date.1.de.add: Addendum for the new translation.
+	* po4a/add_de/deb-old.5.de.add: Likewise.
+	* po4a/822-date.1/822-date.1.cfg: Add the `de' language.
+	* po4a/deb-old.5/deb-old.5.cfg: Likewise.
+	* po4a/add_de/start-stop-daemon.8.de.add: The previous addendum
+	was empty.
 	* C/822-date.1: Fix the manpage's modification date.
 
 2006-07-23  Nicolas Francois  <nicolas.francois@centraliens.net>
