Update the help information in the po4a.mk header. Mostly, the po4a_translate_options variable is no more used.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -3,6 +3,8 @@
 	* po4a/822-date.1/po/822-date.1.pot: Regenerated.
 	* po4a/822-date.1/po/*.po: Merge with pot file, and unfuzzy the
 	typos.
+	* po4a.mk: Update the help information in the header. Mostly, the
+	po4a_translate_options variable is no more used.
 
 2006-07-23  Helge Kreutzmann  <debian@helgefjell.de>
 
