--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,9 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     - dselect.cfg.5. Closes: #379298
     - 822-date.1. Closes: #379417
     - deb-old.5. Closes: #379433
+    - deb.5: Closes: #379661
+    - dpkg-checkbuilddeps.1: Closes: #379798
+    - dpkg-scanpackages.1: Closes: #379825
 
   [ Nicolas François ]
   * Specify --null before the -T tar's option to avoid the "tar: -: file name
