French typo correction

--- a/po/fr.po
+++ b/po/fr.po
@@ -5675,7 +5675,7 @@ msgid ""
 " %s, or nonexistent; however, readlink failed: %s"
 msgstr ""
 "avertissement : %s est censé être un lien symbolique secondaire vers\n"
-"%s ou ne pas exister ; ceoendant, échec de readlink : %s"
+"%s ou ne pas exister ; cependant, échec de readlink : %s"
 
 #: scripts/update-alternatives.pl:538 scripts/update-alternatives.pl:606
 #: scripts/update-alternatives.pl:642
