--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-26  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Typo correction "ceoendant"
+
 2006-07-11  Miguel Figueiredo  <elmig@debianpt.org>
 	    Rui Branco  <ruipb@debianpt.org>
 
