--- a/po/fr.po
+++ b/po/fr.po
@@ -4819,7 +4819,7 @@ msgid ""
 "  when removing `%s'\n"
 "  found `%s'"
 msgstr ""
-"erreur de correspondance dans diversion-vers\n"
+"erreur de correspondance dans divert-to\n"
 "  lors de la suppression de « %s »\n"
 "  « %s » trouvé"
 
