--- a/po/fr.po
+++ b/po/fr.po
@@ -5641,7 +5641,7 @@ msgstr ""
 #: scripts/update-alternatives.pl:528 scripts/update-alternatives.pl:536
 #, perl-format
 msgid "unable to ensure %s nonexistent: %s"
-msgstr "impossible de garantir l'inexistance de %s : %s"
+msgstr "impossible de garantir l'inexistence de %s : %s"
 
 #: scripts/update-alternatives.pl:496 scripts/update-alternatives.pl:530
 #: scripts/update-alternatives.pl:553 scripts/update-alternatives.pl:595
