Install the addenda before the SEE ALSO sections, not at the end of the manpages.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,20 +1,27 @@
+2006-07-27  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* po4a/add_de/dpkg-scanpackages.1.de.add: install the addendum
+	before the SEE ALSO section, not at the end.
+	* po4a/add_de/deb-old.5.de.add: Likewise.
+	* po4a/add_de/deb.5.de.add: Likewise.
+
 2006-07-25  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po4a/deb.5/po/de.po: New translation.
 	* po4a/dpkg-checkbuilddeps.1/po/de.po: Likewise.
 	* po4a/dpkg-scanpackages.1/po/de.po: Likewise.
 	* po4a/dpkg-scansources.1/po/de.po: Likewise.
-	* man/po4a/cleanup-info.8/po/de.po: Likewise.
+	* po4a/cleanup-info.8/po/de.po: Likewise.
 	* po4a/deb.5/deb.5.cfg: Addendum for the new translation.
 	* po4a/dpkg-scanpackages.1/dpkg-scanpackages.1.cfg: Likewise.
 	* po4a/dpkg-checkbuilddeps.1/dpkg-checkbuilddeps.1.cfg: Likewise.
 	* po4a/dpkg-scansources.1/dpkg-scansources.1.cfg: Likewise.
-	* man/po4a/cleanup-info.8/cleanup-info.8.cfg: Likewise.
+	* po4a/cleanup-info.8/cleanup-info.8.cfg: Likewise.
 	* po4a/add_de/deb.5.de.add: Add the `de' language.
 	* po4a/add_de/dpkg-checkbuilddeps.1.de.add: Likewise.
 	* po4a/add_de/dpkg-scanpackages.1.de.add: Likewise.
 	* po4a/add_de/dpkg-scansources.1.de.add: Likewise.
-	* man/po4a/add_de/cleanup-info.8.de.add: Likewise.
+	* po4a/add_de/cleanup-info.8.de.add: Likewise.
 
 2006-07-25  Nicolas Francois  <nicolas.francois@centraliens.net>
 
